--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>fr.maxlego08.zauctionhouse</groupId>
 	<artifactId>zDiscord</artifactId>
-	<version>1.0.6</version>
+	<version>1.0.7</version>
 	<name>zAuctionHouse Discord</name>
 
 	<build>
@@ -25,22 +25,23 @@
 				<artifactId>maven-shade-plugin</artifactId>
 				<version>3.2.1</version>
 				<configuration>
-				    <transformers>
-					<transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-					    <mainClass>fr.maxlego08.discord.ZDiscordPlugin</mainClass>
-					</transformer>
-				    </transformers>
-				    <createDependencyReducedPom>false</createDependencyReducedPom>
+					<transformers>
+						<transformer
+							implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+							<mainClass>fr.maxlego08.discord.ZDiscordPlugin</mainClass>
+						</transformer>
+					</transformers>
+					<createDependencyReducedPom>false</createDependencyReducedPom>
 				</configuration>
 				<executions>
-				    <execution>
-					<phase>package</phase>
-					    <goals>
-						<goal>shade</goal>
-					    </goals>
-				    </execution>
-                		</executions>
-            		</plugin>
+					<execution>
+						<phase>package</phase>
+						<goals>
+							<goal>shade</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
 		</plugins>
 	</build>
 
@@ -92,6 +93,12 @@
 			<artifactId>spigot-api</artifactId>
 			<version>1.18.1-R0.1-SNAPSHOT</version>
 			<scope>provided</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>com.github.Maxlego08</groupId>
+			<artifactId>zTranslator</artifactId>
+			<version>1.0.0.0</version>
 		</dependency>
 
 	</dependencies>
