修正 JDA 舊版語法錯誤
更新至 JDA-5.0.0 GUILD_EMOJIS_AND_STICKERS
部分設定檔與註解繁體中文化

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,8 +1,8 @@
-name: zAuctionHouse-Discord
-author: Maxlego08
-main: fr.maxlego08.discord.ZDiscordPlugin
+name: StarryZAH-Discord
+author: poyu39
+main: com.starrycity.poyu39.ZDiscordPlugin
 version: 1.0.9
 depend: 
  - zAuctionHouseV3
 commands:
-api-version: 1.13
+api-version: 1.19
