--- a/pom.xml
+++ b/pom.xml
@@ -1,9 +1,9 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>fr.maxlego08.zauctionhouse</groupId>
-	<artifactId>zDiscord</artifactId>
-	<version>1.0.9</version>
+	<groupId>com.starrycity</groupId>
+	<artifactId>poyu39</artifactId>
+	<version>1.0.0</version>
 	<name>StarryZAH-Discord</name>
 
 	<build>
@@ -28,7 +28,7 @@
 					<transformers>
 						<transformer
 							implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-							<mainClass>fr.maxlego08.discord.ZDiscordPlugin</mainClass>
+							<mainClass>com.starrycity.poyu39.ZDiscordPlugin</mainClass>
 						</transformer>
 					</transformers>
 					<createDependencyReducedPom>false</createDependencyReducedPom>
