更新版本號 (1.2.0)

--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.starrycity</groupId>
-	<artifactId>zDiscord</artifactId>
+	<artifactId>StarryZAH-Discord</artifactId>
 	<version>1.2.0</version>
 	<name>StarryZAH-Discord</name>
 
