--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,10 @@
 plugins {
-    id 'java'
+    id "java"
+    id "com.github.johnrengelman.shadow" version "7.1.0"
 }
 
 group = 'com.starrycity.zDiscord'
-version = '1.0-SNAPSHOT'
+version = '1.2.0-SNAPSHOT'
 
 repositories {
     mavenCentral()
@@ -41,6 +42,7 @@ tasks.withType(JavaCompile).configureEach {
         options.release = targetJavaVersion
     }
 }
+
 
 processResources {
     def props = [version: version]
