--- a/build.gradle
+++ b/build.gradle
@@ -16,12 +16,20 @@ repositories {
         name = "sonatype"
         url = "https://oss.sonatype.org/content/groups/public/"
     }
+    maven {
+        url = 'https://hub.spigotmc.org/nexus/content/repositories/snapshots/'
+        content {
+            includeGroup 'org.bukkit'
+            includeGroup 'org.spigotmc'
+        }
+    }
+
     maven { url 'https://www.jitpack.io' }
 }
 
 dependencies {
     compileOnly "io.papermc.paper:paper-api:1.19.3-R0.1-SNAPSHOT"
-    implementation "com.github.Maxlego08:zAuctionHouseV3-API:3.1.6"
+    implementation files("libs/zAuctionHouseV3-API-3.1.2.0.jar")
     implementation "com.github.Maxlego08:zTranslator:1.0.0.2"
     implementation "net.dv8tion:JDA:5.0.0-beta.5"
 }
