--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,5 +1,5 @@
 name: zAuctionHouse-Discord
-author: Maxlego08
+authors: [Maxlego08, Alwyn974]
 main: fr.maxlego08.discord.ZDiscordPlugin
 version: 1.1.0
 depend: 
