--- a/pom.xml
+++ b/pom.xml
@@ -75,7 +75,7 @@
 		<dependency>
 			<groupId>com.github.Maxlego08</groupId>
 			<artifactId>zAuctionHouseV3-API</artifactId>
-			<version>3.0.7.6</version>
+			<version>3.1.2.0</version>
 			<scope>provided</scope>
 		</dependency>
 
@@ -83,7 +83,7 @@
 		<dependency>
 			<groupId>net.dv8tion</groupId>
 			<artifactId>JDA</artifactId>
-			<version>4.1.1_143</version>
+			<version>5.0.0-beta.13</version>
 			<scope>compile</scope>
 		</dependency>
 
@@ -91,14 +91,14 @@
 		<dependency>
 			<groupId>org.spigotmc</groupId>
 			<artifactId>spigot-api</artifactId>
-			<version>1.18.1-R0.1-SNAPSHOT</version>
+			<version>1.20.1-R0.1-SNAPSHOT</version>
 			<scope>provided</scope>
 		</dependency>
 
 		<dependency>
 			<groupId>com.github.Maxlego08</groupId>
 			<artifactId>zTranslator</artifactId>
-			<version>1.0.0.0</version>
+			<version>1.0.0.2</version>
 		</dependency>
 
 	</dependencies>
